--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,12 +8,13 @@
         <item quantity="one">%d Serving</item>
         <item quantity="other">%d Servings</item>
     </plurals>
-    <string name="appwidget_text">EXAMPLE</string>
-    <string name="add_widget">Add widget</string>
 
     <string name="shopping_message_all_ingredients">All ingredients</string>
     <!--\u0020 unicode for white space-->
     <string name="shopping_message_removed">\u0020removed from</string>
     <string name="shopping_message_added">\u0020added to</string>
     <string name="shopping_message_end">\u0020your shopping list.</string>
+
+    <string name="widget_empty_text_no_items">No items in your shopping list.</string>
+    <string name="widget_empty_text_start_baking">Start baking!</string>
 </resources>
