--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="main_empty_state_default_message">Can\'t load Recipes</string>
     <string name="recipe_image_content_description">Recipe image</string>
     <string name="play_icon_content_description">Play icon</string>
+    <string name="menu_option_add_all">Add all ingredients to shopping list</string>
 
     <plurals name="recipe_servings_plural">
         <item quantity="one">%d Serving</item>
@@ -17,4 +18,8 @@
 
     <string name="widget_empty_text_no_items">No items in your shopping list.</string>
     <string name="widget_empty_text_start_baking">Start baking!</string>
+    <string name="widget_title">Mim\'s Shopping List</string>
+    <string name="content_description_pause_button">pause button</string>
+    <string name="content_description_replay_button">replay button</string>
+    <string name="content_description_add_ingredient">add ingredient to shopping list</string>
 </resources>
